chore: add incubator module support